change icon to medium blog

--- a/src/sass/components/_toolbar.scss
+++ b/src/sass/components/_toolbar.scss
@@ -96,3 +96,19 @@
 .medium-editor-action-italic {
     font-style: italic;
 }
+
+.button {
+    .button--highlightMenu {
+        color: #fff;
+
+    }
+}
+
+.svgIcon {
+    fill: #fff;
+}
+.medium-editor-button-active{
+    .svgIcon {
+        fill: #fcdd00;
+    }
+}
